fix(core): contrast colors
- fix shim alignment colors with button/card for clr-angular compat

--- a/packages/core/src/button/button.element.scss
+++ b/packages/core/src/button/button.element.scss
@@ -1,4 +1,4 @@
-// Copyright (c) 2016-2021 VMware, Inc. All Rights Reserved.
+// Copyright (c) 2016-2022 VMware, Inc. All Rights Reserved.
 // This software is released under MIT license.
 // The full license information can be found in LICENSE in the root directory of this project.
 
@@ -221,6 +221,7 @@ cds-progress-circle {
 :host([disabled]),
 :host([disabled][action='outline']) {
   --background: #{$cds-alias-status-disabled-tint};
+  --color: #{$cds-alias-status-disabled-shade};
   --border-color: #{$cds-alias-status-disabled-tint};
   --box-shadow-color: #{$cds-alias-object-opacity-0};
 
